--- a/index.css
+++ b/index.css
@@ -3,36 +3,42 @@
 body{
     background-image: url('images/LIN\ BG.png');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
 }
-
 
 /* INDEX PAGE CSS */
 #navbar{
     font-family: 'Life Savers', serif;
     width: 100%;
-    font-size: 20px;
     color: white;
     text-shadow: 0 0 10px white;
-    margin-top: 20px;
+    margin-top: 30px;
 }
+
 
 #nav-logo img{
     width: 76px;
+    -webkit-filter: drop-shadow(0px 0px 15px #fff);
+    filter: drop-shadow(0px 0px 15px #fff);
 }
 
 #nav-pages{
-    width: 500px;
+    width: 600px;
 }
 
 #nav-pages a{
     text-decoration: none;
     color: white;
+    font-size: 40px;
+}
+
+#nav-pages a h3{
+    font-size: 40px;
 }
 
 #home{
-    height: 80vh;
+    height: 100vh;
 }
 
 #home h1{
@@ -40,6 +46,7 @@ body{
     font-size: 200px;
     color: white;
     text-shadow: 0 0 50px white;
+    /* margin-bottom: ; */
 }
 
 .dropdown a{
@@ -49,7 +56,13 @@ body{
 }
 
 .dropdown-menu{
-    background-color: transparent;
+    background-color: transparent;  
+    border-radius: 30px;
+}
+
+.dropdown-item:hover{
+    text-shadow: 0 0 10px white;
+    background-color: rgba(255, 255, 255, 0.38);
 }
 
 /* INDEX PAGE CSS END */
@@ -81,9 +94,44 @@ body{
 
 #gallery-about .carousel-inner{
     height: 600px;
+    border-radius: 50px;
+    /* border: 1px solid white; */
+    box-shadow: 0 0 10px white;
 }
 
 #gallery-about .carousel-caption{
     margin-bottom: 50px;
-    background-color: rgba(0, 0, 0, 0.300);
+    /* background-color: rgba(0, 0, 0, 0.300); */
+}
+
+#gallery-about .carousel-indicators li {
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid #fff;
+    border-radius: 10px;
+    margin: 2px;
+    position: relative;    
+}
+
+#gallery-about .carousel-indicators li.active {
+    background: #fff;
+}
+
+#gallery-about .carousel-item{
+    position: relative;   
+}
+
+#gallery-about .carousel-item::after{
+    content: '';
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0,0,0,0), black);
+    opacity: 0.8;
 }
