--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body{
 }
 
 #nav-pages a h3{
-    font-size: 40px;
+    font-size: 30px;
 }
 
 #home{
@@ -135,3 +135,48 @@ body{
     background-image: linear-gradient(rgba(0,0,0,0), black);
     opacity: 0.8;
 }
+
+/* Contacts Page Start */
+#socials{
+    color: white;
+    font-family: 'EB Garamond', serif;
+    height: 100%;
+    margin-top: 100px;
+}
+
+#socials img{
+    width: 100px;
+    margin-right: 20px;
+    -webkit-filter: drop-shadow(0px 0px 50px #fff);
+    filter: drop-shadow(0px 0px 50px #fff);
+}
+
+#connect h1{
+    font-size: 80px;
+    margin-bottom: 20px;
+    text-shadow: 0 0 20px white;
+}
+
+#contact h1{
+    font-size: 80px;
+    margin-bottom: 20px;
+    text-shadow: 0 0 20px white;
+}
+
+#copyright{
+    color: white;
+    margin-top: 70px;
+}
+
+#copyright h1{
+    font-family: 'Ingrid Darling', cursive;
+    font-size: 100px;
+    text-shadow: 0 0 30px white;
+}
+
+#copyright h2{
+    margin-top: -20px;
+    font-family: 'EB Garamond', serif;
+    font-size: 20px;
+}
+/* Contacts Page End */
