--- a/index.css
+++ b/index.css
@@ -40,6 +40,11 @@ body::-webkit-scrollbar{
     font-size: 30px;
 }
 
+#nav-pages a h3:hover{
+    text-shadow: 0 0 20px white;
+    color: rgb(219, 218, 216)
+}
+
 #home{
     height: 80vh;
 }
@@ -67,6 +72,7 @@ body::-webkit-scrollbar{
 .dropdown-item:hover{
     text-shadow: 0 0 10px white;
     background-color: rgba(255, 255, 255, 0.38);
+    color: rgb(219, 218, 216);
 }
 
 /* INDEX PAGE CSS END */
@@ -92,6 +98,7 @@ body::-webkit-scrollbar{
     text-shadow: 0 0 10px white;
 }
 
+
 #gallery-about{
     margin-bottom: 50px;
 }
@@ -103,7 +110,18 @@ body::-webkit-scrollbar{
 }
 
 #gallery-about .carousel-caption{
-    margin-bottom: 50px;
+    margin-bottom: 10px;
+    font-family: 'Life Savers', serif;
+    font-size: 20px;
+    text-shadow: 0 0 10px white;
+    /* background-color: rgba(0, 0, 0, 0.300); */
+}
+
+#gallery-about .carousel-caption h5{
+    font-family: 'Life Savers', serif;
+    font-size: 40px;
+    text-shadow: 0 0 10px white;
+
     /* background-color: rgba(0, 0, 0, 0.300); */
 }
 
@@ -122,11 +140,14 @@ body::-webkit-scrollbar{
 
 #gallery-about .carousel-indicators li.active {
     background: #fff;
+    box-shadow: 0 0 10px white;
 }
 
 #gallery-about .carousel-item{
-    position: relative;   
+    position: relative;  
 }
+
+
 
 #gallery-about .carousel-item::after{
     content: '';
@@ -219,3 +240,37 @@ body::-webkit-scrollbar{
 
 
 /* Gallery Page End */
+
+/* Statistics Start */
+#statistics {
+    margin-top: 100px;
+    
+    border: 2px solid rgba(255, 255, 255, 0.605);
+    box-shadow: 0 0 100px rgba(255, 255, 255, 0.171) inset;
+    border-radius: 20px;
+
+    color: white;
+    font-family: 'Life Savers', serif;
+    padding: 30px;
+}
+
+#statistics h1{
+    text-shadow: 0 0 10px white;
+}
+
+.small-graph{
+    border-radius: 15px;
+    border: 1px solid white;
+    padding: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.small-graph > :nth-child(2){
+    padding-right: 10px;
+}
+
+.small-graph h3{
+    margin: 0;
+}
+/* Statistics End */
